adapter/internal/operator/gateway-api/testdata/securitypolicy-with-oidc.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 2
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: httproute-1
    namespace: default
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /foo
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: apk.wso2.com/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    creationTimestamp: null
    name: httproute-2
    namespace: default
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /bar
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: apk.wso2.com/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - address: null
        name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          apk.wso2.com/owning-gateway-name: gateway-1
          apk.wso2.com/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-1
securityPolicies:
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    creationTimestamp: null
    name: policy-for-http-route
    namespace: default
    uid: 08335a80-83ba-4592-888f-6ac0bba44ce4
  spec:
    oidc:
      clientID: client2.oauth.foo.com
      clientSecret:
        group: null
        kind: null
        name: client2-secret
      logoutPath: /foo/logout
      provider:
        authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
        issuer: https://oauth.foo.com
        tokenEndpoint: https://oauth.foo.com/token
      redirectURL: https://www.example.com/foo/oauth2/callback
      scopes:
      - openid
      - email
      - profile
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
      namespace: default
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: apk.wso2.com/gatewayclass-controller
- apiVersion: apk.wso2.com/v1alpha1
  kind: SecurityPolicy
  metadata:
    creationTimestamp: null
    name: policy-for-gateway-discover-endpoints
    namespace: envoy-gateway
    uid: b8284d0f-de82-4c65-b204-96a0d3f258a1
  spec:
    oidc:
      clientID: client1.apps.googleusercontent.com
      clientSecret:
        group: null
        kind: null
        name: client1-secret
      logoutPath: /bar/logout
      provider:
        issuer: https://accounts.google.com
      redirectURL: https://www.example.com/bar/oauth2/callback
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: envoy-gateway
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: 'This policy is being overridden by other securityPolicies for these
          routes: [default/httproute-1]'
        reason: Overridden
        status: "True"
        type: Overridden
      controllerName: apk.wso2.com/gatewayclass-controller
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      text:
      - path: /dev/stdout
    http:
    - address: 0.0.0.0
      hostnames:
      - '*'
      isHTTP2: false
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - backendWeights:
          invalid: 0
          valid: 0
        destination:
          name: httproute/default/httproute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            protocol: HTTP
            weight: 1
        hostname: www.example.com
        isHTTP2: false
        name: httproute/default/httproute-1/rule/0/match/0/www_example_com
        oidc:
          clientID: client2.oauth.foo.com
          clientSecret: Y2xpZW50MTpzZWNyZXQK
          cookieSuffix: 5f93c2e4
          hmacSecret: qrOYACHXoe7UEDI/raOjNSx+Z9ufXSc/22C3T6X/zPY=
          logoutPath: /foo/logout
          provider:
            authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
            tokenEndpoint: https://oauth.foo.com/token
          redirectPath: /foo/oauth2/callback
          redirectURL: https://www.example.com/foo/oauth2/callback
          scopes:
          - openid
          - email
          - profile
        pathMatch:
          distinct: false
          name: ""
          prefix: /foo
      - backendWeights:
          invalid: 0
          valid: 0
        destination:
          name: httproute/default/httproute-2/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            protocol: HTTP
            weight: 1
        hostname: www.example.com
        isHTTP2: false
        name: httproute/default/httproute-2/rule/0/match/0/www_example_com
        oidc:
          clientID: client1.apps.googleusercontent.com
          clientSecret: Y2xpZW50MTpzZWNyZXQK
          cookieSuffix: b0a1b740
          hmacSecret: qrOYACHXoe7UEDI/raOjNSx+Z9ufXSc/22C3T6X/zPY=
          logoutPath: /bar/logout
          provider:
            authorizationEndpoint: https://accounts.google.com/o/oauth2/v2/auth
            tokenEndpoint: https://oauth2.googleapis.com/token
          redirectPath: /bar/oauth2/callback
          redirectURL: https://www.example.com/bar/oauth2/callback
          scopes:
          - openid
        pathMatch:
          distinct: false
          name: ""
          prefix: /bar
